--- a/Langs/english.json
+++ b/Langs/english.json
@@ -1,6 +1,7 @@
 {
     "title_screen": "In the title screen.",
     "solar_system": {
+        "exploring": "Exploring the solar system.",
         "timble_hearth": {
             "exploring": "Exploring Timber Hearth.",
             "launch_pad": "On the launch pad.",
@@ -31,6 +32,79 @@
         "attlerock": {
             "exploring": "Exploring the Attlerock.",
             "esker": "Visiting Esker."
+        },
+        "brittle_hollow": {
+            "exploring": "Exploring Brittle Hollow.",
+            "crossroads": "Exploring the Crossroads.",
+            "riebeck": "Visiting Riebeck."
+        },
+        "hollows_lantern": {
+            "exploring": "Exploring Hollow's Lantern."
+        },
+        "sun": {
+            "burning": "Burning up near the Sun.",
+            "orbiting": "Orbiting the Sun."
+        },
+        "ash_twin": {
+            "exploring": "Exploring Ash Twin."
+        },
+        "ember_twin": {
+            "exploring": "Exploring Ember Twin.",
+            "chert": "Visiting Chert."
+        },
+        "quantum_moon": {
+            "exploring": "Exploring somewhere strange..."
+        },
+        "dream_world": {
+            "exploring": "Exploring somewhere strange..."
+        },
+        "stranger": {
+            "exploring": "Exploring somewhere strange..."
+        },
+        "giants_deep": {
+            "exploring": "Exploring Giant's Deep.",
+            "orbiting": "Orbiting Giant's Deep.",
+            "gabbros_ship": "Checking on Gabbro's ship.",
+            "statue_island": "Exploring Statue Island.",
+            "gabbro_island": "Exploring Gabbro's Island.",
+            "gabbro": "Visting Gabbro.",
+            "yard": "Exploring Construction Yard.",
+            "bramble_island": "Exploring Bramble Island.",
+            "somewhere": "Exploring somewhere strange..."
+        },
+        "dark_bamble": {
+            "exploring": "Exploring Dark Bramble.",
+            "orbiting": "Orbiting Dark Bramble.",
+            "somewhere": "Somewhere in Dark Bramble..."
+        },
+        "white_hole": {
+            "exploring": "Exploring the White Hole."
+        },
+        "white_hole_station": {
+            "exploring": "Exploring White Hole Station."
+        },
+        "hourglass_twins": {
+            "exploring": "Exploring The Hourglass Twins"
+        },
+        "interloper": {
+            "exploring": "Exploring Interloper."
+        },
+        "map_satellite": {
+            "checking": "Checking on the Map Satellite."
+        },
+        "sky_shutter": {
+            "checking": "Checking on \"Sky Shutter\" Satellite."
+        },
+        "backer_satellie": {
+            "checking": "Checking on the Backer Satellite."
+        },
+        "ship": {
+            "inside": "Inside the ship."
         }
-    }
+    },
+    "eye_of_the_universe": "Somewhere...",
+    "credits_fast": "Watching the credits.",
+    "credits_final": "Beat the game.",
+    "post_credit_scene": "14.3 billion years later...",
+    "unknown": "Unknown"
 }
